# End-to-End-ML-Stock-Forecasting-and-Portfolio-Optimization

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
src/: app.py  main.py
src/database/: database.py
src/extractor/: extractor.py
src/model/: model.py
src/optimizer/: optimizer.py
src/processor/: processor.py
tests/: test_pipeline.py
